main.css
/* Reset */
*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  min-height: 100vh;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  font-family: "DM Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: var(--text-normal);
  font-style: normal;
  font-size: var(--text-base);
  color: var(--content-primary);
  background: var(--background-gradient, linear-gradient(222deg, #F2F2F2 13.91%, #BEC9CA 98.79%));
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

:root {
  --content-primary: #181818;
  --content-secondary: #414040;
  --content-link: #025e88;
  --text-xxl: 32px;
  --text-xl: 24px;
  --text-lg: 16px;
  --text-base: 14px;
  --text-normal: 400;
  --text-bold: 700;
}

.base {
  font-size: var(--text-base);
}

body {
  font-family: "DM Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: var(--text-normal);
  font-style: normal;
  font-size: var(--text-base);
  color: var(--content-primary);
  background: var(--background-gradient, linear-gradient(222deg, #F2F2F2 13.91%, #BEC9CA 98.79%));
}


a,
a:visited,
a:hover {
  text-decoration: none;
  color: var(--content-link);
}

.container {
  max-width: 904px;
  margin: 40px auto;
  padding: 0 32px;
}


.home-content {
  display: flex;
  flex-direction: column;
  gap: 8px;
  padding: 0 8px 32px 8px;
}

.home-content h2 {
  font-size: var(--text-xl);
  font-weight: var(--text-normal);
  color: var(--content-primary);
}

.home-content p {
  font-size: var(--text-lg);
  font-weight: var(--text-normal);
  color: var(--content-primary);
}

header {
  height: 48px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 8px;
  margin-bottom: 48px;
}

header h1 {
  font-size: var(--text-xxl);
  font-weight: var(--text-bold);
  color: var(--content-primary);
  line-height: 120%;
}

header .header-links {
  display: flex;
  gap: 12px;
}

header .header-links a {
  text-decoration: none;
  path {
    fill: var(--content-primary);
    transition: fill 0.222s ease;
  }
}

header .header-links a:hover {
  path {
    fill: var(--content-link);
  }
}

header .header-links a svg {
  width: 20px;
  height: 20px;
}

.home-content a {
  font-weight: var(--text-bold);
}

.project-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 32px;
}

a.project-thumb {
  display: flex;
  padding: 8px;
  flex-direction: column;
  gap: 0px;
  width: 100%;
  text-decoration: none;
  transition: padding 0.222s ease;
}

.project-thumb img {
  width: 100%;
  height: auto;
  margin-bottom: 8px;
}

a.project-thumb:hover {
  padding: 0;
}

.project-thumb h3 {
  font-size: var(--text-base);
  font-weight: var(--text-bold);
  color: var(--content-primary);
}

.project-thumb p {
  font-size: var(--text-base);
  font-weight: var(--text-base);
  color: var(--content-secondary);
}


.project-details {
  padding: 0 8px;
}

.project-details img {
  width: 100%;
  margin-bottom: 32px;
  border-radius: 12px;
}

.project-details h3 {
  font-size: var(--text-xl);
  font-weight: var(--text-bold);
  color: var(--content-primary);
  margin-bottom: 8px;
}

.project-details p {
  font-size: var(--text-lg);
  margin-bottom: 32px;
}


@media screen and (max-width: 680px) {

  .project-grid {
    grid-template-columns: 1fr;
  }
  .project-details p {
    font-size: var(--text-base);
    margin-bottom: 32px;
  }

}

